<resources>
    <string name="app_name">BlueLight</string>
    <string name="action_settings">Settings</string>
    <string name="choose_a_gap_role">Choose a GAP role</string>
    <string name="central_role">Central Role</string>
    <string name="peripheral_role">Peripheral Role</string>
    <string name="observer_role">Observer Role</string>
    <string name="transmitter_role">Transmitter Role</string>
    <string name="title_activity_central">CentralActivity</string>
    <string name="start_scan">start scan</string>
    <string name="title_activity_peripheral">PeripheralActivity</string>
    <string name="peripheral_name">Peripheral Name</string>
    <string name="start_advertisement">start Advertisement</string>
    <string name="stop_advertisement">stop Advertisement</string>
    <string name="stop_scan">stop scan</string>
</resources>
