<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:text="@string/choose_a_gap_role"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/roles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_choose"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="90dp"
        android:baselineAligned="false">


        <LinearLayout
            android:id="@+id/connected_roles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/bt_central"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/central_role" />

            <Button
                android:id="@+id/bt_peripheral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/peripheral_role" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/advertise_roles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/bt_observer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/observer_role"
                android:enabled="false"/>

            <Button
                android:id="@+id/bt_transmitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/transmitter_role"
                android:enabled="false"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>